--- a/anzh.drob/task-1/index.html
+++ b/anzh.drob/task-1/index.html
@@ -10,7 +10,7 @@
 
         <div class="card">
             <img 
-		src="C:\Users\ASUS VivoBook 15\Pictures\lamborghini\469455.jpg" 
+		src=".\469455.jpg" 
 		alt="Изображение товара 1" 
 		class="card-image">
             <h3 class="card-title">Название товара 1</h3>
@@ -19,7 +19,7 @@
 
         <div class="card">
             <img 
-		src="C:\Users\ASUS VivoBook 15\Pictures\lamborghini\685686.jpg" 
+		src=".\685686.jpg" 
 		alt="Изображение товара 2" 
 		class="card-image">
             <h3 class="card-title">Название товара 2</h3>
@@ -28,7 +28,7 @@
 
         <div class="card">
             <img 
-		src="C:\Users\ASUS VivoBook 15\Pictures\lamborghini\960232.jpg" 
+		src=".\960232.jpg" 
 		alt="Изображение товара 3" 
 		class="card-image">
             <h3 class="card-title">Название товара 3</h3>
